@@ -1,3 +1,9 @@
+2010-01-19  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DecorateThreadsRule.cs: Apply MethodCanBeMadeStaticRule
+	* DoNotLockOnThisOrTypesRule.cs: Apply PreferEmptyInstanceOverNullRule
+	* ThreadModel.cs: Apply MarkEnumerationsAsSerializableRule
+
 2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ThreadModel.cs: Avoid boxing when concatenating strings
